fixed committee spacing

--- a/state/congress/style/congress_1920.css
+++ b/state/congress/style/congress_1920.css
@@ -243,10 +243,12 @@
   border-top: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .oneComm {
+  margin-right: 3%;
+  margin-bottom: 20px;
   border: 1px solid #fec231;
   border-radius: 10px;
   width: 30%;
